--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,89 @@
 *{
 	margin: 0;
 	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-
-.container{
-	width: 1200px;
-	margin:0 auto;
-	padding: 10px;
+body{
+	background-color: #C9F0CE;
 }
+ul{
+	list-style-type: none;
+}
+
+.carousel-title{
+	text-align: center;
+	margin:50px 0 40px;
+	font-size: 2.7rem;
+	font-weight: 300;
+	color: #0C2A7E;
+}
+/*Contenedor*/
+.container{
+	margin: 0 auto;
+	width: 800px;
+}
+.carousel-wrapper{
+	position: relative;
+	height: 360px;
+	width: 100%;
+	border: 5px solid #415066;
+	overflow: hidden;
+}
+.carousel-wrapper li {
+	display: none;
+}
+li.img-current{
+	display: block;
+}
+.carousel-wrapper li img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	max-width: 100%;
+	height: auto;
+}
+/*Controles*/
+.carousel-controls{
+	text-align: center;
+	margin-top: 15px;
+}
+.carousel-controls li{
+	background-color: #415066;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	display: inline-block;
+	height: 12px;
+	width: 12px;
+	margin: 0 4px;
+	cursor: pointer;
+}
+.carousel-controls li.active{
+	background-color: #1DBC3B;
+}
+
+/*RESPONSIVE*/
+@media only screen and (max-width: 825px){
+	.container{
+		width: 500px;
+	}
+	.carousel-wrapper{
+		height: 260px;
+	}
+}
+@media only screen and (max-width: 535px){
+	.container{
+		padding: 5px;
+		width: 100%;
+	}
+	.carousel-wrapper{
+		height: 200px;
+	}
+}
+
+@media only screen and (max-width: 410px){
+	.carousel-wrapper{
+		height: 160px;
+	}
