--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,21 +68,19 @@ li.img-current{
 
 .prev, .next{
 	float: left;
-	margin-top:  150px;
 	cursor: pointer;
 	font-size: 1.7rem;
 	font-weight: bold;
 }
 .prev{
-	position: relative;
-	margin-right: -1px;
+	position: absolute;
+	top: 40%;
 	z-index: 100;
 }
 .next{
 	position: absolute;
-	top: 70%;
-	right: 0;
-	
+	top: 40%;
+	right: 50px;	
 	z-index: 100;
 
 }
