--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@
 	box-sizing: border-box;
 }
 body{
-	background-color: ;
+	background-color:#387741 ;
 }
 ul{
 	list-style-type: none;
@@ -17,7 +17,7 @@ ul{
 	margin:50px 0 40px;
 	font-size: 2.7rem;
 	font-weight: 300;
-	color: #0C2A7E;
+	color: #9AACDE;
 }
 /*Contenedor*/
 .container{
@@ -67,22 +67,23 @@ li.img-current{
 /*PRE-NEXT*/
 
 .prev, .next{
+	position: absolute;
+	top: 40%;
 	float: left;
-	margin-top:  150px;
 	cursor: pointer;
 	font-size: 1.7rem;
 	font-weight: bold;
+	background-color: #0A9247;
+	padding: 5px;
 }
 .prev{
-	position: relative;
-	margin-right: -1px;
+	
+	left: 23%;
 	z-index: 100;
 }
 .next{
-	position: absolute;
-	top: 70%;
-	right: 0;
-	
+
+	right: 23%;
 	z-index: 100;
 
 }
